# Esp32-Lai

./: .gitignore  CMakeLists.txt  README.md
esp32 main/: CMakeLists.txt  display.c  display.h  ds18b20_sensor.c  ds18b20_sensor.h  idf_component.yml  main.c  wifi_connect.c  wifi_connect.h
main/: display.c  display.h  ds18b20_sensor.c  ds18b20_sensor.h  idf_component.yml  main.c  wifi_connect.c  wifi_connect.h
server/: dashboard_final.py  historico_temperatura.csv  requirements.txt  server.py
